lowdb_stack: Add layout, add form

--- a/04/lowdb_stack/views/form.hbs
+++ b/04/lowdb_stack/views/form.hbs
@@ -1,1 +1,20 @@
-<p>TODO form</p>
+<form class="field has-addons has-addons-centered">
+  <p class="control">
+    <span class="select">
+      <select>
+        <option>He</option>
+        <option>She</option>
+        <option>They</option>
+      </select>
+    </span>
+  </p>
+  <p class="control">
+    <input class="input" type="text" placeholder="First Name" />
+  </p>
+  <p class="control">
+    <input class="input" type="text" placeholder="Last Name" />
+  </p>
+  <p class="control">
+    <a class="button is-primary">Add</a>
+  </p>
+</form>
