--- a/04/lowdb_stack/views/index.hbs
+++ b/04/lowdb_stack/views/index.hbs
@@ -1,36 +1,11 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <section class="section">
-      <div class="container">
-        <div class="block">
-          {{> header }}
-        </div>
+<div clas="block">
+  {{> header}}
+</div>
 
-        <div class="block">
-          {{> form }}
-        </div>
+<div class="block">
+  {{> form }}
+</div>
 
-        <div class="block">
-          {{> table }}
-        </div>
-      </div>
-    </section>
-  </body>
-</html>
+<div class="block">
+  {{> table }}
+</div>
