--- a/04/lowdb_stack/views/form.hbs
+++ b/04/lowdb_stack/views/form.hbs
@@ -8,11 +8,17 @@
       </select>
     </span>
   </p>
-  <p class="control">
-    <input class="input" type="text" placeholder="First Name" />
+  <p class="control has-icons-left">
+    <input class="input" type="text" placeholder="Username" />
+    <span class="icon is-small is-left">
+      <i class="fas fa-user"></i>
+    </span>
   </p>
-  <p class="control">
-    <input class="input" type="text" placeholder="Last Name" />
+  <p class="control has-icons-left">
+    <input class="input" type="text" placeholder="Email" />
+    <span class="icon is-small is-left">
+      <i class="fas fa-envelope"></i>
+    </span>
   </p>
   <p class="control">
     <a class="button is-primary">Add</a>
