lowdb_stack: Update layout

--- a/04/lowdb_stack/views/form.hbs
+++ b/04/lowdb_stack/views/form.hbs
@@ -1,4 +1,4 @@
-<form class="field has-addons has-addons-centered">
+<form class="field has-addons">
   <p class="control">
     <span class="select">
       <select>
