lowdb_stack: Update index.hbs layout

--- a/04/lowdb_stack/views/index.hbs
+++ b/04/lowdb_stack/views/index.hbs
@@ -1,12 +1,14 @@
-<div clas="block">
+<div class="block">
   {{> header}}
 </div>
 
-<p class="subtitle is-1 mt-6">Users table</p>
+<p class="subtitle is-2">Add User</p>
 
 <div class="block">
   {{> form }}
 </div>
+
+<p class="subtitle is-2">Users table</p>
 
 <div class="block">
   {{> table }}
