--- a/03/joi_hapi/views/partials/form.hbs
+++ b/03/joi_hapi/views/partials/form.hbs
@@ -1,4 +1,4 @@
-<form action="submit" class="block">
+<form method="post" action="login" class="block">
   <div class="field is-horizontal">
     <div class="field-label is-normal">
       <label class="label">Name</label>
@@ -12,7 +12,12 @@
       </div>
       <div class="field">
         <div class="control is-expanded has-icons-left">
-          <input class="input" name="username" type="text"  placeholder="Username" />
+          <input
+            class="input"
+            name="username"
+            type="text"
+            placeholder="Username"
+          />
           <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
           </span>
