joi_hapi: Make form a login form

--- a/03/joi_hapi/views/login.hbs
+++ b/03/joi_hapi/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="block">
   <h1 class="title">Login</h1>
 </div>
-{{> form }}
-{{#if errors}}
-  {{> error}}
-{{/if}}
+
+<div class="block">
+  {{> form}}
+</div>
