--- a/03/joi_hapi/views/partials/form.hbs
+++ b/03/joi_hapi/views/partials/form.hbs
@@ -1,59 +1,18 @@
 <form method="post" action="login" class="block">
-  <div class="field is-horizontal">
-    <div class="field-label is-normal">
-      <label class="label">Name</label>
+  <div class="field has-addons">
+    <div class="control">
+      <input class="input" name="email" type="text" placeholder="Email" />
     </div>
-
-    <div class="field-body">
-      <div class="field">
-        <div class="control is-expanded">
-          <input class="input" name="name" type="text" placeholder="Name" />
-        </div>
-      </div>
-      <div class="field">
-        <div class="control is-expanded has-icons-left">
-          <input
-            class="input"
-            name="username"
-            type="text"
-            placeholder="Username"
-          />
-          <span class="icon is-small is-left">
-            <i class="fas fa-user"></i>
-          </span>
-        </div>
-      </div>
+    <div class="control">
+      <input
+        class="input"
+        name="password"
+        type="password"
+        placeholder="Password"
+      />
     </div>
-  </div>
-
-  <div class="field is-horizontal">
-    <div class="field-label is-normal">
-      <label class="label">Email</label>
-    </div>
-
-    <div class="field-body">
-      <div class="field">
-        <div class="control has-icons-left">
-          <input class="input" name="email" type="email" placeholder="Email" />
-          <span class="icon is-small is-left">
-            <i class="fas fa-envelope"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="field is-horizontal">
-    <div class="field-label"></div>
-    <div class="field-body">
-      <div class="field is-grouped">
-        <div class="control">
-          <button type="submit" class="button is-link">Submit</button>
-        </div>
-        <div class="control">
-          <button class="button is-link is-light">Cancel</button>
-        </div>
-      </div>
+    <div class="control">
+      <button class="button is-primary" type="submit">Login</button>
     </div>
   </div>
 </form>
