joi_hapi: Change login/form appearance

--- a/03/joi_hapi/views/login/form.hbs
+++ b/03/joi_hapi/views/login/form.hbs
@@ -1,5 +1,5 @@
 <form method="post" action="login" class="block">
-  <div class="field has-addons">
+  <div class="field is-grouped">
     <div class="control">
       <input class="input" name="email" type="text" placeholder="Email" />
     </div>
