joi_hapi: Update README, restructure code

--- a/03/joi_hapi/src/views/login/form.hbs
+++ b/03/joi_hapi/src/views/login/form.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="login" class="block">
+<form method="post" action="" class="block">
   <div class="field is-grouped">
     <div class="control">
       <input class="input" name="email" type="text" placeholder="Email" />
