--- a/03/joi_hapi/src/views/login/form.hbs
+++ b/03/joi_hapi/src/views/login/form.hbs
@@ -1,7 +1,14 @@
 <form method="post" action="" class="block">
   <div class="field is-grouped">
     <div class="control">
-      <input class="input" name="email" type="text" placeholder="Email" />
+      <input class="input {{#if error.email}}is-danger{{/if}}" name="email" type="text" placeholder="Email" />
+      {{#if error.email}}
+      <p class="help is-danger">
+        {{#each error.email}}
+          {{this}}
+        {{/each}}
+      </p>
+      {{/if}}
     </div>
     <div class="control">
       <input
